<resources>
    <string name="app_name">XerYou</string>
    <string name="action_settings">Options</string>
    <string name="action_nothing">Soon…</string>
    <string name="backdrop_title">Creation de XeroSs</string>
    <string name="backdrop_subtitle">Application mobile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="category_count">%d items</string>


    <string name="title_categories">Music,Series,Movie,Anime|Manga,video Game,Food</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="not_available">Not available</string>
    <string name="dark_mode">Dark mode </string>
    <string name="back">Back</string>
    <string name="number_rank_item_list">#</string>
    <string name="title_rank_item_list">TITLE</string>
    <string name="state_rank_item_list">STATE</string>
    <string name="category_text">Category</string>
    <string name="login">Login</string>
    <string name="error_message">An error has occurred, please try again</string>
    <string name="state_by_default_finished">State (Default: Finished)</string>
    <string name="text_name">Name</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
</resources>
