<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_black">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="163dp"
        android:background="@color/line"
        android:gravity="center_horizontal">

    </LinearLayout>

    <ImageView
        android:id="@+id/activityCategory_ImageItem"
        android:layout_width="137dp"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/activityCategory_TitleItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/activityCategory_ButtonBack"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/cardview_light_background"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/activityCategory_RankTextItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activityCategory_TitleItem"
        android:layout_alignStart="@+id/activityCategory_TitleItem"
        android:layout_marginBottom="-40dp"
        android:text="@string/category_text"
        android:textColor="@color/album_title"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="2dp"
        android:layout_below="@+id/activityCategory_numberRankItem"
        android:layout_alignParentStart="true"
        android:background="@color/line"
        android:gravity="center_horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/activityCategory_ButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/activityCategory_ImageItem"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="106dp"
        android:background="@drawable/buttoncorner"
        android:text="@string/back"
        android:textColor="@color/cardview_light_background"
        android:textSize="12sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activityCategory_ButtonAddItem"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/activityCategory_ImageItem"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/green"
        android:src="@drawable/ic_action_add"
        app:borderWidth="0dp"
        app:fabCustomSize="35dp"
        app:maxImageSize="28dp" />

    <TextView
        android:id="@+id/activityCategory_numberRankItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/activityCategory_ImageItem"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-7dp"
        android:layout_marginTop="205dp"
        android:text="@string/number_rank_item_list"
        android:textColor="@color/album_title" />

    <TextView
        android:id="@+id/activityCategory_TitleRankItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/activityCategory_numberRankItem"
        android:layout_alignParentStart="true"
        android:layout_marginStart="89dp"
        android:text="@string/title_rank_item_list"
        android:textColor="@color/album_title" />

    <TextView
        android:id="@+id/activityCategory_StateRankItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/activityCategory_numberRankItem"
        android:layout_alignParentStart="true"
        android:layout_marginStart="270dp"
        android:text="@string/state_rank_item_list"
        android:textColor="@color/album_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityCategory_RecyclerViewItem"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:layout_marginTop="225dp" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="565dp"
        android:background="@color/line"
        android:gravity="center_horizontal">

    </LinearLayout>

</RelativeLayout>